final hosting code

--- a/Growbinar_Backend/Authentication/template/index.html
+++ b/Growbinar_Backend/Authentication/template/index.html
@@ -125,7 +125,7 @@
             <p>Welcome to <a href="https://www.growbinar.com" style="color: #5a67d8;">Growbinar.com</a></p>
             <p>Please click the button below to confirm your email address and activate your account.</p>
             <div class="button">
-                <a href={{url}}>CONFIRM EMAIL</a>
+                <a href="{{BASE_URL}}{{verifyMail}}">CONFIRM EMAIL</a>
             </div>
         </div>
         <div class="footer">
